--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -248,6 +248,7 @@ en:
   mail_body_wiki_content_updated: "The '%{id}' wiki page has been updated by %{author}."
   mail_subject_newsletter: "%{compagny}: %{edizione} del %{date}"
   notice_user_newsletter_email_sent: "Quindicinale %{edizione} del %{date} inviato a %{user}"
+  label_email_programmed: "Emails Total"
 
   gui_validation_error: 1 error
   gui_validation_error_plural: "%{count} errors"
