--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -254,6 +254,7 @@ it:
   mail_body_wiki_content_updated: La pagina '%{id}' wiki è stata aggiornata da%{author}.
   mail_subject_newsletter: "%{compagny}: %{edizione} del %{date}"
   notice_user_newsletter_email_sent: "Quindicinale %{edizione} del %{date} inviato a %{user}"
+  label_email_programmed: "Totale emails"
 
   gui_validation_error: 1 errore
   gui_validation_error_plural: "%{count} errori"
