--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -297,6 +297,8 @@ it:
   field_user: Utente
   field_principal: Principale
   field_role: Ruolo
+  field_program_by_role: Programmi invii per <b>ruoli</b>
+  field_program_by_convention: Programmi invii per <b>convenzione</b>
   field_homepage: Homepage
   field_is_public: Pubblico
   field_parent: Sottoedizione di
@@ -1751,6 +1753,7 @@ it:
   button_send_newsletter: Invia quindicinale
   button_send_emails: "Mails(%{jobs}) da inviare"
   button_send_newsletter_immediately: Invialo subito
+  button_send_newsletter_page: Vai alla pagina di invio delle mails (manuale)
   label_user_list_newsletters: "Storico degli invii precedenti"
   label_newsletter: Quindicinale
   error_can_not_create_newsletter: "Creazione automatica della newsletter MAIL (%{project}) non riuscità"
