footer e payment table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1433,6 +1433,9 @@ en:
   label_table_fs: Fiscosport
   label_fee_manage: Abbonamenti
   label_payment: Pagamenti
+  field_payment: Pagamento
+  label_footer: Pie di pagine
+  field_footer: Pie di pagine
 
 #Fee
   label_fee: Abbonamento
