--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1482,6 +1482,9 @@ it:
   label_table_fs: Fiscosport
   label_fee_manage: Abbonamenti
   label_payment: Pagamenti
+  field_payment: Pagamento
+  label_footer: Pie di pagine
+  field_footer: Pie di pagine
 
 #Fee
   label_fee: Abbonamento
