--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -957,7 +957,7 @@ it:
   button_lock: Blocca
   button_unlock: Sblocca
   button_download: Scarica
-  button_list: Elenca
+  button_list: Lista
   button_view: Mostra
   button_move: Sposta
   button_move_and_follow: Sposta e segui
