--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -234,6 +234,9 @@ en:
   mail_subject_lost_password: "Your %{value} password"
   mail_body_lost_password: 'To change your password, click on the following link:'
   lost_password_unvalid_token: "The email is valid only one time. You must done the procedure again to generate a new valid email"
+  mail_subject_register_activated: "Your %{value} account activation"
+  mail_subject_register_confirm: "Confirm mail %{value}"
+  mail_subject_register_info: "Account information %{value}"
   mail_subject_register: "Your %{value} account activation"
   mail_body_register: 'To activate your account, click on the following link:'
   mail_body_account_information_external: "You can use your %{value} account to log in."
