--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -967,6 +967,7 @@ en:
 #dom verify
   all: all
   button_save_abbonamento: Salva abbonamento
+  button_resend_abbo: Resend user (mail)
   button_save_dati: Salva dati
   button_save_fatture: Salva fatture
   button_news_fast_reply: Risposta rapida
